--- a/src/components/AccountsList/Account.css
+++ b/src/components/AccountsList/Account.css
@@ -36,7 +36,17 @@
     border-radius: 50%;
     margin: 5px;
 }
-
+.account-left {
+    display: flex;
+    align-items: center;
+}
+.account-left img {
+    border-radius: 8px;
+    padding: 2px;
+}
+.account-left-username {
+    margin-left: 5px;
+}
 .orange {
     background-color: orange;
 }
